...
    "Elevation profile" : {

    },
    "Elevation, OpenHikes Pro" : {

    },
    "End and Save Hike" : {

    },
    "End Hike and Record" : {

    },
    "End this hike?" : {
...
    "Follow" : {

    },
    "Follow Paths" : {

    },
    "Follow This Trail" : {

    },
    "Followed: %@" : {

    },
    "Following" : {
...
    "Hike Progress" : {

    },
    "Hike started on %@" : {

    },
    "Hike Summary" : {

    },
    "Hike title" : {

    },
    "Hiked" : {
...
    "Other hikers can find this hike now." : {

    },
    "Parking" : {

    },
    "Pause" : {

    },
    "Pause Hike" : {

    },
    "Pause Hike Recording" : {
...
    "Steepness colors" : {

    },
    "Still published" : {

    },
    "Stop" : {

    },
    "Stop %lld" : {

    },
    "Stop Hike" : {
...
